--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@
 }
 
 .benefits {
-  padding-top: 94px;
+  padding-top: 47px;
   padding-bottom: 0px;
   margin-bottom: 0px;
   margin-top: 0px;
@@ -118,6 +118,10 @@
 }
 
 /* Work */
+
+.our-works {
+  padding-top: 47px;
+}
 
 .work {
   display: flex;
