--- a/css/common.css
+++ b/css/common.css
@@ -16,6 +16,8 @@
   --btn-wight-color: #ffffff;
   --background-grey-color: #2f303a;
   --bg-cl-icon: #f5f4fa;
+  --icon-cl: #afb1b8;
+  --icon-pick-cl: #ffffff;
 
   /* footer color */
   --fttitle-text-color: #212121;
