--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   height: 600px;
   background-color: var(--background-grey-color);
   background-image: linear-gradient(
+      to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
@@ -216,4 +217,25 @@
 
 .team-block {
   background-color: #f5f4fa;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.svg-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--icon-cl);
+}
+
+.svg-icon:hover,
+:focus {
+  fill: var(--icon-pick-cl);
+}
+
+.item-social:not(:last-child) {
+  margin-right: 10px;
 }
