--- a/css/main.css
+++ b/css/main.css
@@ -225,15 +225,26 @@
   margin-top: 16px;
 }
 
+.link-social {
+  display: block;
+  width: 44px;
+  height: 44px;
+  color: var(--icon-cl);
+  border-radius: 50%;
+  background-color: var(--bgicon-cl);
+  padding: 12px;
+}
+
+.link-social:hover,
+:focus {
+  color: var(--icon-pick-cl);
+  background-color: var(--bgicon-pick-cl);
+}
+
 .svg-icon {
   width: 20px;
   height: 20px;
-  fill: var(--icon-cl);
-}
-
-.svg-icon:hover,
-:focus {
-  fill: var(--icon-pick-cl);
+  fill: currentColor;
 }
 
 .item-social:not(:last-child) {
