--- a/css/common.css
+++ b/css/common.css
@@ -41,6 +41,17 @@ body {
 
 /* Утилиты */
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
 .list {
   list-style: none;
   padding: 0px;
