--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,10 +1,14 @@
 /* Our-works */
 
-.our-works {
-  display: block;
-  margin: 0;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
   padding: 0;
-  text-align: center;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 /* Button-filter */
