--- a/css/common.css
+++ b/css/common.css
@@ -188,7 +188,6 @@ body {
 /* Fotter */
 
 .ftr {
-  display: blo;
   width: 100%;
   background-color: var(--ftbackground-grey-color);
   padding-top: 60px;
@@ -240,17 +239,43 @@ address {
 }
 
 .ftr .social-title {
+  font-weight: 700;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-top: 0px;
   color: var(--ftprimary-wight-color);
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.link-social {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  padding: 12px;
+}
+
+.link-social .svg-icon {
+  width: 20px;
+  height: 20px;
+  fill: currentColor;
 }
 
 .ftsocial-link {
   display: block;
   align-self: center;
+  align-items: center;
+  border-radius: 4px;
   margin-left: 70px;
 }
 
@@ -263,4 +288,8 @@ address {
 .ftsocial-link .link-social:focus {
   color: var(--icon-pick-cl);
   background-color: var(--bgicon-pick-cl);
+}
+
+.item-social:not(:last-child) {
+  margin-right: 10px;
 }
