--- a/css/common.css
+++ b/css/common.css
@@ -236,6 +236,7 @@ address {
 
 .ftr .container {
   display: flex;
+  align-items: baseline;
 }
 
 .ftr .social-title {
@@ -255,16 +256,6 @@ address {
   margin-top: 16px;
 }
 
-.link-social {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  padding: 12px;
-}
-
 .link-social .svg-icon {
   width: 20px;
   height: 20px;
@@ -272,7 +263,6 @@ address {
 }
 
 .ftsocial-link {
-  display: block;
   align-self: center;
   align-items: center;
   border-radius: 4px;
