--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -70,6 +70,12 @@
   display: block;
 }
 
+.gallery .link:hover,
+.gallery .link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .item img {
   display: block;
   width: 100%;
